<resources>
    <string name="app_name">Laundry</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="blue" />
    <string name="red" />
    <string name="green" />

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_placed">Order\nPlaced</string>
    <string name="driver_assign">Driver\nassign</string>
    <string name="pickup_on_the_way">Pickup on\nthe way</string>
    <string name="picked">Picked</string>
    <string name="wash_in_progress">Wash in\nProgress</string>
    <string name="shipped">Shipped</string>
    <string name="delivery_pick_drop">Delivery Pick &amp; Drop</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone No</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="help">Help</string>
</resources>
