<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".ui.editProfile.EditProfileActivity">

            <RelativeLayout
                android:id="@+id/profile_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp250"
                android:layout_gravity="center"
                android:background="@color/sky_blue">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp50"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/edit_back_iv"
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/dp15"
                        android:src="@drawable/ic_left_arrow" />

                    <com.laundry.CustomTextRegular.CustomTextRegular
                        android:id="@+id/login_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="@dimen/dp25"
                        android:gravity="center"
                        android:text="@string/edit_profile"
                        android:textColor="@color/white_color"
                        android:textSize="@dimen/text_15"
                        android:textStyle="bold" />

                    <!--    <ImageView
                            android:id="@+id/edit_iv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginRight="@dimen/dp15"
                            android:src="@drawable/ic_edit" />-->

                </LinearLayout>


                <RelativeLayout
                    android:id="@+id/layout"
                    android:layout_width="@dimen/dp120"
                    android:layout_height="@dimen/dp120"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center">

                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/user_image_iv"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/userplaceholder"
                        app:civ_border_color="@color/white"
                        app:civ_border_width="2dp" />

                    <ImageView
                        android:id="@+id/select_image_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="bottom"
                        android:layout_marginTop="80dp"
                        android:background="@drawable/circuler_white_bg"
                        android:padding="@dimen/dp10"
                        android:src="@drawable/ic_camera" />


                </RelativeLayout>


            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/corner"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp8">

                    <ImageView
                        android:id="@+id/name_image"
                        android:layout_width="@dimen/dp25"
                        android:layout_height="@dimen/dp25"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_user" />

                    <EditText
                        android:id="@+id/name_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="7dp"
                        android:layout_marginTop="3dp"
                        android:background="@null"
                        android:hint="@string/name"
                        android:inputType="textEmailAddress"
                        android:lineSpacingExtra="7dp"
                        android:padding="4dp"
                        android:textSize="@dimen/text_12" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/corner"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp8">

                    <ImageView
                        android:layout_width="@dimen/dp25"
                        android:layout_height="@dimen/dp25"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_close_envelope" />

                    <EditText
                        android:id="@+id/email_id_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="7dp"
                        android:layout_marginTop="3dp"
                        android:background="@null"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:lineSpacingExtra="7dp"
                        android:padding="4dp"
                        android:textSize="@dimen/text_12" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/corner"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp8">

                    <ImageView
                        android:layout_width="@dimen/dp25"
                        android:layout_height="@dimen/dp25"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_smartphone_call" />

                    <EditText
                        android:id="@+id/phone_no_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="7dp"
                        android:layout_marginTop="3dp"
                        android:background="@null"
                        android:hint="@string/phone_no"
                        android:inputType="phone"
                        android:lineSpacingExtra="7dp"
                        android:padding="4dp"
                        android:textSize="@dimen/text_12" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/corner"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp8">

                    <ImageView
                        android:layout_width="@dimen/dp25"
                        android:layout_height="@dimen/dp25"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_placeholder" />

                    <EditText
                        android:id="@+id/address_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="7dp"
                        android:layout_marginTop="3dp"
                        android:background="@null"
                        android:hint="Address"
                        android:inputType="text"
                        android:lineSpacingExtra="7dp"
                        android:padding="4dp"
                        android:textSize="@dimen/text_12" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/corner"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp8">

                    <ImageView
                        android:id="@+id/password_image"
                        android:layout_width="@dimen/dp25"
                        android:layout_height="@dimen/dp25"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_house_key" />

                    <EditText
                        android:id="@+id/password_et"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="7dp"
                        android:layout_marginTop="3dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:lineSpacingExtra="7dp"
                        android:maxLength="20"
                        android:padding="4dp"
                        android:textSize="@dimen/text_12" />

                    <ImageView
                        android:id="@+id/eye_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_eye" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/corner"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp8">

                    <ImageView
                        android:id="@+id/confirm_image"
                        android:layout_width="@dimen/dp25"
                        android:layout_height="@dimen/dp25"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_house_key" />

                    <EditText
                        android:id="@+id/confrim_password_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="7dp"
                        android:layout_marginTop="3dp"
                        android:background="@null"
                        android:hint="Confirm Password"
                        android:inputType="textPassword"
                        android:lineSpacingExtra="7dp"
                        android:maxLength="20"
                        android:padding="4dp"
                        android:textSize="@dimen/text_12" />

                </LinearLayout>

                <!-- <CheckBox
                     android:id="@+id/checkbox_termandcondition"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:buttonTint="@color/sky_blue"
                     android:padding="10dp"
                     android:text="Term and Condition"
                     android:textColor="@color/sky_blue" />-->

                <TextView
                    android:id="@+id/save_btn_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp45"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="@dimen/dp10"
                    android:background="@drawable/background_button_sky"
                    android:gravity="center"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp"
                    android:text="@string/save"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />


            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</layout>